[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "url-to-markdown"
version = "0.1.0"
description = "URL to Markdown - Automatic Sitemap Discovery and Content Extraction"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "tqdm>=4.66.0",
  "html2text>=2020.1.16",
]

[project.scripts]
url-to-markdown = "url_to_markdown:main"

[tool.setuptools]
py-modules = ["url_to_markdown"]
