[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "url-to-markdown"
version = "0.1.4"
description = "URL to Markdown - Automatic Sitemap Discovery and Content Extraction"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "tqdm>=4.66.0",
  "html2text>=2020.1.16",
]
authors = [{ name = "url-to-markdown contributors" }]
license = { file = "LICENSE" }
keywords = [
  "cli", "markdown", "sitemap", "crawler", "web-scraping", "content-extraction"
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Text Processing :: Markup :: Markdown",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
url-to-markdown = "url_to_markdown:main"

[tool.setuptools]
py-modules = ["url_to_markdown"]
